ui feedback update

--- a/apps/wallet/src/ui/app/components/navigation/Navigation.module.scss
+++ b/apps/wallet/src/ui/app/components/navigation/Navigation.module.scss
@@ -71,10 +71,10 @@
     border-bottom-color: transparent;
 
     &:hover {
-        color: colors.$nav-item-hover;
+        color: colors.$sui-blue-steel-darker;
 
         i {
-            color: colors.$nav-item-hover;
+            color: colors.$sui-blue-steel-darker;
         }
     }
 
