--- a/apps/wallet/src/ui/styles/values/colors.scss
+++ b/apps/wallet/src/ui/styles/values/colors.scss
@@ -27,7 +27,7 @@ $error: #eb5a29;
 $error-light: #ffece6;
 $cta-light-blue: #adcadd;
 $shadow-color: #1018280d;
-$nav-item-hover: #627885;
+$sui-blue-steel-darker: #627885;
 $sui-blue-light: #e1f3ff;
 $issue: #ff794b;
 $issue-light: #ffece5;
