--- a/apps/wallet/src/ui/app/pages/dapp-tx-approval/DappTxApprovalPage.module.scss
+++ b/apps/wallet/src/ui/app/pages/dapp-tx-approval/DappTxApprovalPage.module.scss
@@ -11,13 +11,14 @@
         height: 31px;
         display: flex;
         justify-content: center;
-        color: colors.$sui-blue-steel-dark;
+        color: colors.$sui-blue-steel-darker;
         padding: 10px 0;
         font-weight: 600;
         font-size: 11px;
         line-height: 100%;
         text-transform: uppercase;
         border-radius: 15px 15px 0 0;
+        letter-spacing: 0.05em;
     }
 
     .transparent-header {
@@ -32,6 +33,7 @@
         height: auto;
         line-height: 100%;
         text-transform: capitalize;
+        letter-spacing: 0;
 
         .tx-type-header-status {
             font-weight: 600;
@@ -43,7 +45,7 @@
         width: 100%;
         display: flex;
         justify-content: space-between;
-        padding-top: 8px;
+        padding-top: 10px;
         color: colors.$sui-blue-steel-dark;
 
         @include utils.typography('Primary/BodySmall-M');
@@ -54,6 +56,10 @@
     padding: 15px;
     display: flex;
     flex-direction: column;
+
+    :first-child {
+        padding-top: 0;
+    }
 }
 
 .content {
@@ -104,7 +110,7 @@
     font-size: 14px;
     line-height: 17px;
     display: flex;
-    gap: 30px;
+    gap: 22px;
     border-bottom: 1px solid colors.$gray-45;
 
     .tab {
@@ -112,8 +118,9 @@
         background: none;
         border: none;
         padding: 8px 0;
+        padding-top: 0;
         margin-bottom: -1px;
-        color: colors.$gray-75;
+        color: colors.$sui-blue-steel-darker;
         font-weight: 600;
         font-size: 14px;
         line-height: 100%;
@@ -130,15 +137,15 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    margin-top: 15px;
+    margin-top: 6px;
 }
 
 .object-name {
     font-weight: 500;
-    font-size: 14px;
+    font-size: 13px;
     line-height: 17px;
-    color: colors.$gray-85;
-    font-family: 'Red Hat MonoVariable', ui-monospace, monospace;
+    color: colors.$sui-blue-steel-dark;
+    font-family: 'Space Mono', ui-monospace, monospace;
     word-break: break-all;
 }
 
@@ -195,11 +202,36 @@
     .value {
         @include utils.typography('Primary/BodySmall-M');
 
-        color: colors.$sui-blue-steel-dark;
         display: block;
 
         &::first-letter {
             text-transform: uppercase;
         }
     }
+
+    .label {
+        color: colors.$sui-blue-steel-dark;
+    }
+
+    .value {
+        color: colors.$sui-blue-steel-darker;
+    }
+
+    .content-wrapper {
+        padding: 12px 15px;
+    }
+
+    .content {
+        gap: 12px;
+    }
+}
+
+.owner-address {
+    font-family: 'Space Mono', ui-monospace, monospace;
+}
+
+.permissions-content-label {
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
 }
