--- a/apps/wallet/src/ui/styles/utils/index.scss
+++ b/apps/wallet/src/ui/styles/utils/index.scss
@@ -235,7 +235,7 @@ $main-extra-space: sizing.$main-bottom-space;
         font-weight: 600;
         letter-spacing: 0;
     } @else if $type == 'mono-type' {
-        // TODO chanage to mono font
+        // TODO change to mono font
         font-style: normal;
         font-weight: 500;
         font-size: 14px;
