add selling price

--- a/apps/wallet/src/ui/app/components/user-approve-container/UserApproveContainer.module.scss
+++ b/apps/wallet/src/ui/app/components/user-approve-container/UserApproveContainer.module.scss
@@ -60,7 +60,7 @@
     @include utils.typography('Primary/BodySmall-M');
 
     .address {
-        font-family: 'Space Mono', ui-monospace, monospace;
+        font-family: 'Red Hat MonoVariable', ui-monospace, monospace;
     }
 
     .label {
