--- a/apps/wallet/src/ui/app/pages/dapp-tx-approval/DappTxApprovalPage.module.scss
+++ b/apps/wallet/src/ui/app/pages/dapp-tx-approval/DappTxApprovalPage.module.scss
@@ -145,7 +145,7 @@
     font-size: 13px;
     line-height: 17px;
     color: colors.$sui-blue-steel-dark;
-    font-family: 'Space Mono', ui-monospace, monospace;
+    font-family: 'Red Hat MonoVariable', ui-monospace, monospace;
     word-break: break-all;
 }
 
@@ -227,7 +227,7 @@
 }
 
 .owner-address {
-    font-family: 'Space Mono', ui-monospace, monospace;
+    font-family: 'Red Hat MonoVariable', ui-monospace, monospace;
 }
 
 .permissions-content-label {
